<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <Button
        android:id="@+id/p1poisonless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="P-"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/p1poisonmore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="P+"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/p2poisonmore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="P+"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/p2poisonless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="P-"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/lifetwotoone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/arrowUp"
        android:src="@drawable/ic_baseline_arrow_upward_24"
        android:tint="#FA0000"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/lifeonetotwo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/arrowDown"
        android:src="@drawable/ic_baseline_arrow_downward_24"
        android:tint="#FA0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <ImageButton
        android:id="@+id/p1lifemore"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/h1plus"
        android:src="@drawable/ic_baseline_favorite_24"
        android:tint="#FA0000"
        app:layout_constraintBottom_toTopOf="@+id/lifetwotoone"
        app:layout_constraintEnd_toEndOf="@+id/p1poisonmore"
        app:layout_constraintStart_toStartOf="@+id/p1poisonmore"
        app:layout_constraintTop_toBottomOf="@+id/p1poisonmore" />

    <ImageButton
        android:id="@+id/p1lifeless"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/h1minus"
        android:src="@drawable/ic_baseline_favorite_border_24"
        android:tint="#FA0000"
        app:layout_constraintBottom_toTopOf="@+id/lifetwotoone"
        app:layout_constraintEnd_toEndOf="@+id/p1poisonless"
        app:layout_constraintStart_toStartOf="@+id/p1poisonless"
        app:layout_constraintTop_toBottomOf="@+id/p1poisonless" />

    <ImageButton
        android:id="@+id/p2lifemore"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/h2plus"
        android:src="@drawable/ic_baseline_favorite_24"
        android:tint="#FA0000"
        app:layout_constraintBottom_toTopOf="@+id/p2poisonmore"
        app:layout_constraintEnd_toEndOf="@+id/p2poisonmore"
        app:layout_constraintStart_toStartOf="@+id/p2poisonmore"
        app:layout_constraintTop_toBottomOf="@+id/lifeonetotwo" />

    <ImageButton
        android:id="@+id/p2lifeless"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/h2minus"
        android:src="@drawable/ic_baseline_favorite_border_24"
        android:tint="#FA0000"
        app:layout_constraintBottom_toTopOf="@+id/p2poisonless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/p2poisonless"
        app:layout_constraintTop_toBottomOf="@+id/lifeonetotwo"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/counter1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contador1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/lifetwotoone"
        app:layout_constraintEnd_toStartOf="@+id/p1lifeless"
        app:layout_constraintStart_toEndOf="@+id/p1lifemore"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/counter2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contador2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/p2lifeless"
        app:layout_constraintStart_toEndOf="@+id/p2lifemore"
        app:layout_constraintTop_toBottomOf="@+id/lifeonetotwo" />

</androidx.constraintlayout.widget.ConstraintLayout>